--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview",
     "clean": "if exist dist rmdir /s /q dist",
     "deploy:build": "npm run clean && npm run build:prod",
+    "deploy:github": "npm run deploy:build && gh-pages -d dist",
     "serve": "vite preview --port 3000"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
