--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
   "name": "mporteddev",
-  "homepage": "https://mported.dev/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:prod": "vite build --mode production",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "clean": "if exist dist rmdir /s /q dist",
-    "deploy:build": "npm run clean && npm run build:prod",
-    "deploy:github": "npm run deploy:build && gh-pages -d dist",
-    "serve": "vite preview --port 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
-    "@react-three/postprocessing": "^3.0.4",
-    "@tailwindcss/postcss": "^4.1.11",
     "@vitejs/plugin-react": "^4.7.0",
     "framer-motion": "^12.23.11",
     "gsap": "^3.13.0",
-    "lenis": "^1.3.8",
-    "postprocessing": "^6.37.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-jsx": "^5.1.7",
@@ -32,18 +22,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.11.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
   }
 }
