--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://mported.github.io/myPortfolio/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "echo \"Use GitHub Actions to deploy (workflow available)\"",
     "lint": "eslint .",
     "preview": "vite preview"
   },
