ci(pages): switch to peaceiris/actions-gh-pages to avoid deprecated artifact action

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Build and deploy to GitHub Pages
+name: Build and deploy to GitHub Pages (direct gh-pages)
 
 on:
   push:
@@ -29,12 +29,11 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Configure Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v1
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          path: './dist'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: gh-pages
 
-# After this workflow uploads the artifact, GitHub Pages will automatically deploy it.
+# This workflow builds the site and publishes the compiled `dist/` directory directly to the `gh-pages` branch.
