ci(pages): switch to Pages artifact flow; ignore docs and remove gh-pages

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,12 +11,14 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-deploy:
+  build-and-publish-docs:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -29,11 +31,12 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Configure Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact for Pages
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: gh-pages
+          path: ./dist
 
 # This workflow builds the site and publishes the compiled `dist/` directory directly to the `gh-pages` branch.
