--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -35,8 +35,19 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Upload artifact for Pages
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build-and-publish-docs
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
 # This workflow builds the site and publishes the compiled `dist/` directory directly to the `gh-pages` branch.
