--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: './MportedDEV/package-lock.json'
+          cache-dependency-path: 'MportedDEV/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
