Simplify GitHub Actions workflow to fix deployment issues
- Remove npm cache configuration that was causing path resolution errors
- Simplify build steps to avoid git process conflicts
- Keep only essential workflow steps for reliable deployment

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,14 +28,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'MportedDEV/package-lock.json'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
 
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
