--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 name: Build and Deploy React App to GitHub Pages
 
 on:
@@ -32,7 +30,7 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run build
@@ -55,4 +53,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
->>>>>>> 9363cd4d0cebc6766ddc01b37ea9b35e76dea9ee
