--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "assets:convert": "node ./scripts/convert-svg.js"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
@@ -29,6 +30,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "globby": "^14.1.0",
+    "sharp": "^0.33.5",
     "vite": "^7.0.4"
   }
 }
