--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scheduler": "0.23.2",
     "styled-jsx": "^5.1.7",
     "three": "^0.155.0"
   },
